# hello-yocto-recipe

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  main.c  meson.build
